# Kafka-event-edu

./: docker-compose.yml  init-clickhouse.sh  init-kafka.sh
analitic/: Dockerfile  pyproject.toml
analitic/analitic/: __init__.py  main.py
analitic/analitic/api/: __init__.py
analitic/analitic/api/v1/: __init__.py  events.py
analitic/analitic/depencies/: depencies.py
analitic/analitic/repositories/: events_repository.py
analitic/analitic/schemas/: events.py
analitic/analitic/service/: events_service.py
api/: Dockerfile  pyproject.toml
api/api-geteway/: main.py
api/api-geteway/api/v1/: __init__.py  event.py
api/api-geteway/depencies/: http_session.py  producer.py
api/api-geteway/models/: event.py
consumer/: Dockerfile  pyproject.toml
consumer/consumer/: kafka_init.py  main.py
consumer/consumer/batch_writer/: __init__.py  batch_writer.py
consumer/consumer/dispatcher/: __init__.py  dispatcher.py  router.py
consumer/consumer/repository/: event_repository.py
data/node1/: config.xml
data/node2/: config.xml
data/node3/: config.xml
data/node4/: config.xml
