[project]
name = "api-getway"
version = "0.1.0"
description = ""
authors = [
    {name = "LopatoEO",email = "126246079+LopatoEO@users.noreply.github.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "aiokafka (>=0.13.0,<0.14.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "aiohttp (>=3.13.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
